# folketinget

./: .gitignore  README.md  main.py  pyproject.toml
src/folketinget/: __init__.py  client.py  schemas.py
src/folketinget/client/: __init__.py  api.py  fields.py  protocols.py  query_client.py  querybuilder.py
src/folketinget/models/: __init__.py  aktør.py  dokument.py  møde.py  relationer.py  sag.py  sagstrin.py  øvrige.py
tests/: test_query_client.py  test_querybuilder.py  test_schemas.py
