[project]
name = "folketinget"
version = "0.1.1"
description = "Intuitive client for the Danish Parliament API."
readme = "README.md"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" },
    { name = "Jonas Høgh Kyhse-Andersen", email = "jonash@email.fo" },
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
]

[project.scripts]
folketinget = "folketinget:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
